# statstudio

./: .env.example  .gitignore  PRD_StatStudio.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_create_user.py
backend/app/: config.py  deps.py  main.py
backend/app/api/v1/: datasets.py  health.py  router.py
backend/app/engine/: dataset.py  descriptives.py  registry.py
backend/app/models/: user.py
backend/app/schemas/: dataset.py  user.py
backend/app/tasks/: celery_app.py
backend/tests/api/: test_datasets.py  test_health.py
backend/tests/engine/: test_dataset.py  test_descriptives.py  test_engine_isolation.py
frontend/: Dockerfile  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: AnalyzePanel.tsx
frontend/src/lib/: api.ts  clientAnalyze.ts  clientParse.ts  clientStats.ts
frontend/tests/: AnalyzePanel.test.tsx  App.test.tsx  clientParse.test.ts  clientStats.test.ts
frontend/tests/fixtures/: legacy.xls
